1999-08-01  Alex Lancaster  <alex@santafe.edu>

	* space.h (Object2dDisplay, Value2Display, Discrete2d, Diffuse2d,
	DblBuffer2d, Grid2d): Add +create: convenience methods to these
	CREATABLE protocols.

	* Value2dDisplay.[hm] ([Value2dDisplay
	create:setDisplayWidget:colormap:setDiscrete2dToDisplay:]):
	Convenience method.

	* Object2dDisplay.[hm] ([Object2dDisplay
	create:setDisplayWidget:setDiscrete2dToDisplay:setDisplayMessage:]):
	Convenience method.

	* Discrete2d.[hm] ([Discrete2d +create:setSizeX:Y:]): Convenience
	method.

	* Diffuse2d.[hm] ([Diffuse2d
	+create:setSizeX:Y:setDiffusionConstant:setEvaporationRate:]):
	Convenience method.

	* DblBuffer2d.[hm] ([DblBuffer2d +create:setSizeX:Y:]):
	Convenience method.

	* Grid2d.[hm] ([Grid2d +create:setSizeX:Y:]): Convenience method.

1999-07-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d hdf5In:]): Do createEnd after
	the call the shallowLoadObject.
	
1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* space.h (Object2dDisplay): Add -makeProbeAtX:Y:.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m (lispInLatticeValues, lispInLatticeObjects,
	lispOutLatticeObjects, lispOutLatticeValues): New static functions
	replace internal methods.  lispInLatticeValues checks to see that
	size of array element is the same as size of an id.

1999-06-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d setDiscrete2d:toFile:]): Use InFile
	+create:setName: instead of +create:withName:.

	* Int2dFiler.m ([Int2Filer -fileTo:]): Likewise.  Use raiseEvent
	macro instead of method.

1999-06-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ConwayLife2d.h: Declare implemented methods.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Value2dDisplay.m ([Value -display]): Remove METHODS and USE_JAVA
	ifdefs.  Add a conditional on drawPointImp, in case it came
	up NULL due to a JavaProxy.
